2006-08-02  Jesse van den Kieboom  <jesse@icecrew.nl>
	* plugins/filebrowser/gedit-file-browser-widget.c: changed tooltips
	for back and forward to match nautilus

	* plugins/filebrowser/gedit-file-browser-widget.c:
	* plugins/filebrowser/gedit-file-browser-view.c:
	
	Fixed bug when opening a directory which is expanded.
	
	* plugins/filebrowser/gedit-file-browser-widget-ui.xml:
	* plugins/filebrowser/gedit-file-browser-widget.c:

	Added keyboard navigation (Alt+Left, Alt+Right, Alt+Up, Backspace) and
	directory up action.
	
2006-08-02  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-widget.c: fixed problem
	introduced by cleaning up the memory leaks
	* plugins/filebrowser/gedit-file-browser-store.c: fixed warning
	about gnome_vfs_mime_type_get_equivalence

2006-08-02  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/.cvsignore: added ignore file

	* plugins/filebrowser/gedit-file-bookmarks-store.c:
	* plugins/filebrowser/gedit-file-browser-plugin.c:
	* plugins/filebrowser/gedit-file-browser-store.c:
	* plugins/filebrowser/gedit-file-browser-widget.c:
	* plugins/filebrowser/gedit-file-browser-plugin.c:
	
	Fix several memory leaks. The plugin should now be memory leak free.

2006-08-01  Steve Frécinaux  <steve@istique.net>

	* plugins/snippets/snippets/snippets.glade: add a translator comment
	on the "tab trigger" string. The issue is that "tab" means "tab key"
	as well as "notebook tab", and some translators understood it the
	wrong way.

2006-07-31  Steve Frécinaux  <steve@istique.net>

	* plugins/filebrowser/gedit-file-browser-store.c: fix bug
	349411 – Filebrowser plugin crash when renaming. Now 
	FileBrowserNodeDir uses an internal "parent" FileBrowserNode.

2006-07-26  Steve Frécinaux  <steve@istique.net>

	* plugins/filebrowser/filebrowser.schemas.in: fix bug 348670 –
	activate browser plugins raises an gconf error.

=== gedit 2.15.5 ===

2006-07-24  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac: