@@ -153,7 +153,7 @@ restore_default_location (GeditFileBrowserPlugin * plugin,
 	if (root != NULL && *root != '\0') {
 		uri = gnome_vfs_uri_new (root);
 
-		if (uri == NULL || (!remote && !gnome_vfs_uri_is_local (uri))) {
+		if (uri == NULL || (!remote && gedit_file_browser_utils_is_local (root))) {
 		} else if (virtual != NULL && virtual != '\0') {
 			gedit_file_browser_widget_set_root_and_virtual_root (data->tree_widget, 
 			                                                     root,
@@ -746,7 +746,7 @@ on_virtual_root_changed_cb (GeditFileBrowserStore * store,
 		gtk_action_set_sensitive (
 			gtk_action_group_get_action (data->action_group, 
 	                                            "OpenTerminal"),
-	                guri != NULL && gnome_vfs_uri_is_local (guri));
+	                guri != NULL && gedit_file_browser_utils_is_local (virtual));
 		
 		if (guri != NULL)
 			gnome_vfs_uri_unref (guri);
