@@ -1,3 +1,11 @@
+2006-08-04  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* plugins/filebrowser/gedit-file-browser-utils.[ch]:
+	* plugins/filebrowser/gedit-file-browser-plugin.c:
+	* plugins/filebrowser/gedit-file-browser-widget.c:
+	
+	Fixed checking for uri to be local
+	
 2006-08-02  Jesse van den Kieboom  <jesse@icecrew.nl>
 	* plugins/filebrowser/gedit-file-browser-widget.c: changed tooltips
 	for back and forward to match nautilus
